# CodeGeneration

./: .gitattributes  .gitmodules  README.md
UEMExecutionEngine/: .cproject  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  preinstall.sh
UEMExecutionEngine/src/api/: UFControl.c  UFControl_deprecated.c  UFPort.c  UFPort_deprecated.c  UFSystem.c  UFSystem_deprecated.c  UFTask.c  UFTask_deprecated.c  UFTimer_deprecated.c
UEMExecutionEngine/src/api/include/: UFSystem.h  UFTask.h  UFTask_deprecated.h  UFTimer_deprecated.h  uem_data.h
UEMExecutionEngine/src/application/: Display.c  MatA.c  MatB.c  MatB.cic  VecMul.c
UEMExecutionEngine/src/common/include/: UCBasic.h  UCDynamicLinkedList.h  UCDynamicStack.h  UCThread.h  UCThreadEvent.h  UCThreadMutex.h  UCTime.h  uem_common.h
UEMExecutionEngine/src/kernel/: UKChannel.c  UKTask.c  uem_data.c
UEMExecutionEngine/src/kernel/include/: uem_data.h
UEMExecutionEngine/src/kernel/unconstrained/: UKCPUTaskManager.c  UKCPUThreadPool.c  UKChannel.c  UKSharedMemoryChannel.c
UEMExecutionEngine/src/template/: data_template.c  uem_data.template
UEMLibraryCode/: .cproject  .project  Makefile.am  Makefile.in  config.h.in  configure.ac  preinstall.sh
UEMLibraryCode/buildscripts/linux/: Makefile.am  configure.ac
UEMLibraryCode/buildscripts/unconstrained/linux/: configure.ac  preinstall.sh
UEMLibraryCode/buildscripts/unconstrained/windows/: DirProperty.props  config.h  config_x86.h
UEMLibraryCode/src/api/: UFControl.c  UFControl_deprecated.c  UFLoop.c  UFMulticastPort.c  UFPort.c  UFPort_deprecated.c  UFSystem.c  UFSystem_deprecated.c  UFTask.c  UFTask_deprecated.c  UFTimer.c  UFTimer_deprecated.c
UEMLibraryCode/src/api/include/: UFControl.h  UFControl_deprecated.h  UFLoop.h  UFMulticastPort.h  UFPort.h  UFPort_deprecated.h  UFSystem.h  UFSystem_deprecated.h  UFTask.h  UFTask_deprecated.h  UFTimer.h  UFTimer_deprecated.h
UEMLibraryCode/src/application/: Display.cic  Display_0.c  MatA.cic  MatA_0.c  MatB.cic  MatB_0.c  VecMul.cic  VecMul_0.c
UEMLibraryCode/src/common/: UCBasic.c  UCEndian.c  UCString.c
UEMLibraryCode/src/common/encryption/: UCEncryptionHIGHT.c  UCEncryptionLEA.c  UCEncryptionSEED.c
UEMLibraryCode/src/common/include/: UCBasic.h  UCCUDABasic.h  UCEndian.h  UCString.h  uem_common.h
UEMLibraryCode/src/common/unconstrained/: UCAlloc.c  UCBasic.c  UCDynamicLinkedList.c  UCDynamicStack.c  UCFixedSizeQueue.c
UEMLibraryCode/src/kernel/: UKChannel.c  UKModeTransition.c  UKMulticast.c  UKSharedMemoryChannel.c  UKSharedMemoryMulticast.c  UKTask.c  UKTaskParameter.c  UKTime.c  UKTimer.c  uem_data.c
UEMLibraryCode/src/kernel/constrained/: UKAddOnHandler.c  UKChannel.c  UKChannelMemory.c  UKLibrary.c  UKSharedMemoryChannel.c  UKTask.c  UKTaskControl.c  UKTaskParameter.c  UKTaskScheduler.c  UKTask_constrained.c  UKTime.c  UKTimer.c
UEMLibraryCode/src/kernel/include/: UKChannel.h  UKChannelMemory.h  UKLibrary.h  UKModule.h  UKMulticast.h  UKMulticastMemory.h  UKSharedMemoryChannel.h  UKSharedMemoryMulticast.h  UKTask.h  UKTaskParameter.h  UKTime.h  UKTimer.h  uem_callbacks.h  uem_channel_data.h  uem_common_struct.h  uem_data.h  uem_enum.h  uem_lite_protocol_data.h  uem_protocol_data.h
UEMLibraryCode/src/kernel/unconstrained/: UKCPUCompositeTaskManager.c  UKCPUGeneralTaskManager.c  UKCPUTaskCommon.c  UKCPUTaskManager.c  UKCPUTaskManager.c.bak  UKChannel.c  UKChannelMemory.c  UKChannel_unconstrained.c  UKGPUMemorySystem.c  UKGPUSharedMemoryChannel.c  UKHostMemorySystem.c  UKHostSystem.c  UKLoop.c  UKLoopModelController.c  UKLoopModelController.c.bak  UKModeTransition.c  UKModeTransitionModelController.c  UKModelController.c  UKModule.c  UKMulticast.c  UKMulticastMemory.c  UKProcessor.c  UKProgram.c  UKSharedMemoryChannel.c  UKSharedMemoryMulticast.c  UKTask.c  UKTaskParameter.c  UKTask_unconstrained.c  UKTime.c  UKTimer.c
UEMLibraryCode/src/main/unconstrained/: UEMMainCommon.c  UEMMainCommon.h
UEMLibraryCode/src/module/: Module_ev3dev.c
UEMLibraryCode/src/module/include/: Module_ev3dev.h
UEMLibraryCode/templates/: Doxyfile.ftl  Makefile.ftl  library_code.ftl  library_header.ftl  task_code.ftl  uem_channel_data.ftl  uem_common_data.ftl  uem_data.ftl  uem_manual.ftl  uem_module_data.ftl
UEMLibraryCode/templates/arduino/: Makefile.ftl  uem_channel_data.ftl  uem_data.ftl
UEMLibraryCode/templates/constrained/arduino/: Makefile.ftl  uem_channel_data.ftl  uem_data.ftl  uem_module_data.ftl
UEMLibraryCode/templates/linux/: Makefile.ftl  uem_channel_data.ftl  uem_data.ftl  uem_data.ftl~  uem_module_data.ftl  uem_multicast_data.ftl
UEMLibraryCode/templates/unconstrained/: uem_channel_data.ftl  uem_data.ftl  uem_module_data.ftl  uem_multicast_data.ftl
UEMLibraryCode/templates/unconstrained/linux/: Makefile.am.ftl
UEMLibraryCode/templates/unconstrained/windows/: Project.vcxproj.filters.ftl  Project.vcxproj.ftl  ProjectProperty.props.ftl
UEMTranslatedCodeTemplate/: .cproject  .project  Makefile.am  Makefile.in  configure.ac
UEMTranslatedCodeTemplate/src/api/: UFControl.c  UFControl_deprecated.c  UFPort.c  UFPort_deprecated.c  UFSystem.c  UFSystem_deprecated.c  UFTask.c  UFTask_deprecated.c  UFTimer.c  UFTimer_deprecated.c
UEMTranslatedCodeTemplate/src/api/include/: UFControl_deprecated.h  UFPort.h  UFSystem.h  UFTask_deprecated.h  UFTimer.h
UEMTranslatedCodeTemplate/src/application/: Display.c  Display.cic  Display0.c  MatA.cic  MatA0.c  MatB.c  MatB0.c  VecMul.cic  VecMul0.c
UEMTranslatedCodeTemplate/src/common/include/: UCCPUSchedule.h  UCDynamicLinkedList.h  UCString.h  UCSystem.h  UCThread.h  uem_common.h
UEMTranslatedCodeTemplate/src/kernel/: UKChannel.c  UKChunk.c  UKLibrary.c  UKModeTransition.c  UKProcessor.c  UKTask.c  UKTaskParameter.c  uem_data.c
UEMTranslatedCodeTemplate/src/kernel/include/: UKChannel.h  UKModeTransition.h  UKTask.h  uem_data.h
UEMTranslatedCodeTemplate/src/template/: uem_data.template
UEMTranslatedCodeTemplate/templates/: Makefile.ftl  library_code.ftl  library_header.ftl  task_code.ftl  uem_data.ftl
(+795 files in other folders)
