
MAIN_DIR=src/main
API_DIR=src/api
KERNEL_DIR=src/kernel
COMMON_DIR=src/common

PLATFORM_DIR=native/linux

bin_PROGRAMS=proc

MAIN_SOURCES=$(MAIN_DIR)/$(PLATFORM_DIR)/main.c

API_SOURCES=

KERNEL_SOURCES=

COMMON_SOURCES=

proc_SOURCES=$(MAIN_SOURCES) $(API_SOURCES) $(KERNEL_SOURCES) $(COMMON_SOURCES)
			 

MAIN_CFLAGS=-I$(MAIN_DIR)/include

API_CFLAGS=-I$(API_DIR)/include

KERNEL_CFLAGS=-I$(KERNEL_DIR)/include

COMMON_CFLAGS=-I$(COMMON_DIR)/include

proc_CFLAGS=$(MAIN_CFLAGS) $(API_CFLAGS) $(KERNEL_CFLAGS) $(COMMON_CFLAGS)


MAIN_LDADD=

API_LDADD=

KERNEL_LDADD=

COMMON_LDADD=

proc_LDADD=$(MAIN_LDADD) $(API_LDADD) $(KERNEL_LDADD) $(COMMON_LDADD)



