
MAIN_DIR=src/main

APPLICATION_DIR=src/application
API_DIR=src/api
KERNEL_DIR=src/kernel
COMMON_DIR=src/common
PLATFORM_DIR=native/linux
DEVICE_RESTRICTION=unconstrained

SYSTEM_CFLAGS=${PTHREAD_CFLAGS}

SYSTEM_LDADD=${PTHREAD_LDADD} -lm


bin_PROGRAMS=proc

MAIN_SOURCES=$(MAIN_DIR)/$(PLATFORM_DIR)/main.c

APPLICATION_SOURCES=$(APPLICATION_DIR)/x264Enc_Init_3_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_Decode_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_Decode_1.c\
	$(APPLICATION_DIR)/G723Enc_0.c\
	$(APPLICATION_DIR)/x264Enc_Deblock_2_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_Decode_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_Decode_1.c\
	$(APPLICATION_DIR)/MP3Dec_VLDStream_0.c\
	$(APPLICATION_DIR)/MP3Dec_VLDStream_1.c\
	$(APPLICATION_DIR)/x264Enc_Encoder_1_0.c\
	$(APPLICATION_DIR)/Control_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_IntraPredY_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_IntraPredV_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_WriteFileH_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_WriteFileH_1.c\
	$(APPLICATION_DIR)/MP3Dec_Antialias_0.c\
	$(APPLICATION_DIR)/MP3Dec_Antialias_1.c\
	$(APPLICATION_DIR)/MP3Dec_Subband_0.c\
	$(APPLICATION_DIR)/MP3Dec_Subband_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredY_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredY_1.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_Deblock_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_Deblock_1.c\
	$(APPLICATION_DIR)/x264Enc_ME_0_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_IntraPredU_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredU_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredU_1.c\
	$(APPLICATION_DIR)/UserInput_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_Deblock_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_Deblock_1.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredV_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredV_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_ReadFileH_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_ReadFileH_1.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredY_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_InterPredY_1.c\
	$(APPLICATION_DIR)/MP3Dec_WriteFileM_0.c\
	$(APPLICATION_DIR)/MP3Dec_WriteFileM_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_IntraPredV_0.c\
	$(APPLICATION_DIR)/Interrupt_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_IntraPredU_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_ReadFileH_0.c\
	$(APPLICATION_DIR)/H264Dec_VIDEO_ReadFileH_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_IntraPredY_0.c\
	$(APPLICATION_DIR)/MP3Dec_Stereo_0.c\
	$(APPLICATION_DIR)/MP3Dec_Stereo_1.c\
	$(APPLICATION_DIR)/MP3Dec_DeQ_0.c\
	$(APPLICATION_DIR)/MP3Dec_DeQ_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_WriteFileH_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_WriteFileH_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredU_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredU_1.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredV_0.c\
	$(APPLICATION_DIR)/H264Dec_PHONE_InterPredV_1.c\
	$(APPLICATION_DIR)/MP3Dec_Reorder_0.c\
	$(APPLICATION_DIR)/MP3Dec_Reorder_1.c\
	$(APPLICATION_DIR)/x264Enc_VLC_4_0.c\
	$(APPLICATION_DIR)/G723Dec_0.c\
	$(APPLICATION_DIR)/MP3Dec_Hybrid_0.c\
	$(APPLICATION_DIR)/MP3Dec_Hybrid_1.c\
	$(APPLICATION_DIR)/h264decoder.c

API_SOURCES=$(API_DIR)/UFControl_deprecated.c\
	$(API_DIR)/UFControl.c\
	$(API_DIR)/UFPort_deprecated.c\
	$(API_DIR)/UFPort.c\
	$(API_DIR)/UFSystem_deprecated.c\
	$(API_DIR)/UFSystem.c\
	$(API_DIR)/UFTask_deprecated.c\
	$(API_DIR)/UFTask.c\
	$(API_DIR)/UFTimer_deprecated.c\
	$(API_DIR)/UFTimer.c

KERNEL_SOURCES=$(KERNEL_DIR)/uem_data.c\
	$(KERNEL_DIR)/UKChannel.c\
	$(KERNEL_DIR)/UKProcessor.c\
	$(KERNEL_DIR)/UKModeTransition.c\
	$(KERNEL_DIR)/UKTask.c
			   
KERNEL_DEVICE_SOURCES=$(KERNEL_DIR)/$(DEVICE_RESTRICTION)/UKCPUTaskManager.c\
	$(KERNEL_DIR)/$(DEVICE_RESTRICTION)/UKCPUCompositeTaskManager.c\
	$(KERNEL_DIR)/$(DEVICE_RESTRICTION)/UKTime.c\
	$(KERNEL_DIR)/$(DEVICE_RESTRICTION)/UKSharedMemoryChannel.c

COMMON_SOURCES=$(COMMON_DIR)/$(PLATFORM_DIR)/UCThread.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCDynamicLinkedList.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCDynamicStack.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCThreadEvent.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCThreadMutex.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCTime.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCString.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCSystem.c\
	$(COMMON_DIR)/$(PLATFORM_DIR)/UCBasic.c

proc_SOURCES=$(MAIN_SOURCES) $(APPLICATION_SOURCES) $(API_SOURCES) $(KERNEL_SOURCES) $(KERNEL_DEVICE_SOURCES) $(COMMON_SOURCES)
			 

MAIN_CFLAGS=-I$(MAIN_DIR)/include

API_CFLAGS=-I$(API_DIR)/include

KERNEL_CFLAGS=-I$(KERNEL_DIR)/include -I$(KERNEL_DIR)/$(DEVICE_RESTRICTION)/include

COMMON_CFLAGS=-I$(COMMON_DIR)/include

TOP_CFLAGS=-I$(top_srcdir)

proc_CFLAGS=-Wall -O0 -g $(TOP_CFLAGS) $(MAIN_CFLAGS) $(API_CFLAGS) $(KERNEL_CFLAGS) $(COMMON_CFLAGS) $(SYSTEM_CFLAGS)


MAIN_LDADD=

API_LDADD=

KERNEL_LDADD=

COMMON_LDADD=$(SYSTEM_LDADD)

proc_LDADD=$(MAIN_LDADD) $(API_LDADD) $(KERNEL_LDADD) $(COMMON_LDADD)



